prod/preview-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
spec:
  ports:
  - name: "http"
    #nodePort: 30300
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
